SERVER-5494 Fix for failure in bench_test1.js

config.seconds was being rounded to an integer causing
division by 0.